--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "pub": "git add .; git commit -m \"New Release\"; npm version patch; git push; npm publish;",
-    "test": "node test.js"
+    "test": "node test.js",
+    "save": "git add .; git commit -m 'New Release'; git push; npm version patch; npm publish; git push;"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,7 @@
     "alphanumeric",
     "sort"
   ],
-  "author": "",
+  "author": "fantasyui.com <fantasyui.com@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/fantasyui-com/natural-sort-by-key/issues"
